--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -25,12 +25,16 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     wearApp project(':wear')
+    // Agregar Firebase para la autenticación.
+    // Agregar para iniciar sesión con Google
+    // Agregar para iniciar sesión con Facebook
     compile 'com.google.android.gms:play-services-wearable:10.2.1'
     compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.google.firebase:firebase-auth:10.2.1' // Agregar Firebase para la autenticación.
-    compile 'com.google.android.gms:play-services-auth:10.2.1' // Agregar para iniciar sesión con Google
-    compile 'com.facebook.android:facebook-android-sdk:4.5.0' // Agregar para iniciar sesión con Facebook
+    compile 'com.google.firebase:firebase-auth:10.2.1'
+    compile 'com.google.android.gms:play-services-auth:10.2.1'
+    compile 'com.facebook.android:facebook-android-sdk:4.5.0'
+    compile 'com.android.support:design:25.3.0'
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
