--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:10.2.1'
     compile 'com.facebook.android:facebook-android-sdk:4.5.0'
     compile 'com.android.support:design:25.3.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.squareup.picasso:picasso:2.5.0'
+    compile 'de.hdodenhof:circleimageview:1.2.1'
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
