--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -29,15 +29,15 @@ dependencies {
     // Agregar para iniciar sesión con Google
     // Agregar para iniciar sesión con Facebook
     compile 'com.google.android.gms:play-services-wearable:10.2.1'
-    compile 'com.android.support:appcompat-v7:25.3.0'
+    compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.firebase:firebase-auth:10.2.1'
     compile 'com.google.android.gms:play-services-auth:10.2.1'
-    compile 'com.facebook.android:facebook-android-sdk:4.5.0'
-    compile 'com.android.support:design:25.3.0'
+    compile 'com.android.support:design:25.1.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.squareup.picasso:picasso:2.5.0'
     compile 'de.hdodenhof:circleimageview:1.2.1'
+    compile 'com.firebaseui:firebase-ui-auth:1.2.0'
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
