--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.0'
     compile 'de.hdodenhof:circleimageview:1.2.1'
     compile 'com.firebaseui:firebase-ui-auth:1.2.0'
+    compile 'com.google.android.gms:play-services-maps:10.2.1'
+    compile 'com.google.android.gms:play-services-places:10.2.1'
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
