--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.david.socialsport">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -39,11 +40,6 @@
 
         <activity
             android:name=".Pantallas.Principal"
-            android:label="@string/title_activity_pantalla_principal"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity
-            android:name=".Pantallas.VerEvento"
             android:label="@string/title_activity_pantalla_principal"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"></activity>
