--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -49,5 +49,8 @@ dependencies {
 
     //Librería de FirebaseUI (para Base de Datos)
     compile 'com.firebaseui:firebase-ui-database:1.0.0'
+
+
+    compile 'com.google.firebase:firebase-storage:10.2.0'
 }
 apply plugin: 'com.google.gms.google-services'
