--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     // Agregar para iniciar sesión con Google
     // Agregar para iniciar sesión con Facebook
     compile 'com.google.android.gms:play-services-wearable:10.2.1'
-    compile 'com.android.support:appcompat-v7:25.1.1'
+    compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.firebase:firebase-auth:10.2.1'
     compile 'com.google.android.gms:play-services-auth:10.2.1'
@@ -41,6 +41,8 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:10.2.1'
     compile 'com.google.android.gms:play-services-places:10.2.1'
     testCompile 'junit:junit:4.12'
+
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
 
     compile 'com.google.firebase:firebase-core:10.2.1'
 
