--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -71,6 +71,16 @@
             android:label="@string/title_activity_crear_evento"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"></activity>
+        <activity
+            android:name=".Pantallas.VerUsuarios"
+            android:label="@string/usuarios"
+            android:screenOrientation="portrait"
+            android:theme="@style/Dialog"></activity>
+        <activity
+            android:name=".Pantallas.VerComentarios"
+            android:label="@string/usuarios"
+            android:screenOrientation="portrait"
+            android:theme="@style/Dialog"></activity>
     </application>
 
 </manifest>
