--- a/tv/build.gradle
+++ b/tv/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile 'com.android.support:leanback-v17:25.3.0'
     compile 'com.android.support:appcompat-v7:25.3.0'
     //compile 'com.github.bumptech.glide:glide:3.4.+'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
